--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "flux-lsp-cli",
-  "version": "1.0.0",
+  "name": "@influxdata/flux-lsp-cli",
+  "version": "0.1.0",
   "description": "Flux cli LSP server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [
     "flux",
