--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "bundle": "rollup --config rollup.config.js",
-    "prepublish": "npm run bundle"
+    "prepublish": "./build.sh"
   },
   "keywords": [
     "flux",
