Fix dev dependencies

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "bundle": "rollup --config rollup.config.js",
-    "prepublish": "./build.sh"
+    "prepublishOnly": "./build.sh"
   },
   "keywords": [
     "flux",
@@ -22,13 +22,13 @@
   "license": "MIT",
   "dependencies": {
     "@influxdata/flux-lsp-node": "^0.1.0",
-    "rollup": "^1.27.8",
     "yargs": "^15.0.2"
   },
   "bin": {
     "flux-lsp": "./src/bin.js"
   },
   "devDependencies": {
+    "rollup": "^1.27.8",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
