Add first basic tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs:
     - run:
         name: "run lint"
         command: npm run lint
+    - run:
+        name: "run tests"
+        command: npm test
 
 workflows:
   version: 2.1
