--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "src/cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/**/*_test.js",
     "lint": "eslint .",
     "bundle": "rollup --config rollup.config.js",
     "prepublishOnly": "./build.sh"
@@ -29,7 +29,6 @@
     "flux-lsp": "./src/bin.js"
   },
   "devDependencies": {
-    "rollup": "^1.27.8",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
@@ -37,6 +36,9 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "expect": "^25.1.0",
+    "mocha": "^7.1.0",
+    "rollup": "^1.27.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-preserve-shebangs": "^0.1.2"
   }
