--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "main": "src/cli.js",
   "scripts": {
     "test": "mocha test/**/*_test.js",
-    "lint": "eslint .",
-    "bundle": "rollup --config rollup.config.js",
-    "prepublishOnly": "./build.sh"
+    "lint": "eslint ."
   },
   "keywords": [
     "flux",
@@ -29,7 +27,6 @@
     "flux-lsp": "./src/bin.js"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^6.0.0",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
@@ -37,9 +34,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "expect": "^25.1.0",
-    "mocha": "^7.1.0",
-    "rollup": "^1.27.8",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-preserve-shebangs": "^0.1.2"
+    "mocha": "^7.1.0"
   }
 }
