--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@influxdata/flux-lsp-cli",
-  "version": "0.7.9",
+  "version": "0.7.10",
   "description": "Flux cli LSP server",
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
   "author": "Brandon Farmer <bthesorceror@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@influxdata/flux-lsp-node": "0.5.25",
+    "@influxdata/flux-lsp-node": "^0.5.26",
     "axios": "^0.19.2",
     "through2": "^3.0.1",
     "yargs": "^15.3.1"
