--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@influxdata/flux-lsp-cli",
-  "version": "0.7.17",
+  "version": "0.7.18",
   "description": "Flux cli LSP server",
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "yargs": "^15.3.1"
   },
   "bin": {
-    "flux-lsp": "./src/bin.js"
+    "flux-lsp": "src/bin.js"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
