--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@influxdata/flux-lsp-cli",
-  "version": "0.7.17",
+  "version": "0.7.18",
   "description": "Flux cli LSP server",
   "repository": {
     "type": "git",
@@ -19,13 +19,13 @@
   "author": "Brandon Farmer <bthesorceror@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@influxdata/flux-lsp-node": "^0.5.33",
+    "@influxdata/flux-lsp-node": "^0.5.34",
     "axios": "^0.21.1",
     "through2": "^3.0.1",
     "yargs": "^15.3.1"
   },
   "bin": {
-    "flux-lsp": "./src/bin.js"
+    "flux-lsp": "src/bin.js"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
